--- a/style.css
+++ b/style.css
@@ -1,57 +1,75 @@
 * {
-  padding: 0%;
-  margin: 0%;
-  box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+body {
+    font-family: 'Poppins', sans-serif;
+}
+
 .main {
-  height: 100%;
-  width: 100%;
-  background: url(./img/bg2.jpg) center center;
-  background-size: cover;
+    height: 100vh;
+    width: 100%;
+    background: url(./img/bg2.jpg) center center;
+    background-size: cover;
 }
-.head{
-  margin-top: 100px;
+
+.head {
+    margin-top: 10vh;
 }
+
 .overlay {
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
+
 .title {
-  color: white;
-  margin-top: 10px;
-  text-align: center;
-  font-size: 2.5rem;
-  font-family: 'Poppins', sans-serif 100;
+    color: white;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 2.5rem;
+    font-family: 'Poppins', sans-serif;
 }
-.box{
+
+.box {
     margin-top: 20px;
     color: white;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    
-    
-
 }
-.box div{
+
+.box div {
     width: 150px;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 20px;
 }
-input{
-    
+
+input {
     height: 50px;
-    width: 90px;
+    width: 90%;
+    max-width: 150px; /* Optional: Set a maximum width for the input */
+    margin-bottom: 10px;
     background-color: rgba(255, 255, 255, 0.9);
     border-color: transparent;
-    border-radius: 10px ;
+    border-radius: 10px;
     text-align: center;
     font-size: 20px;
-   
+}
+
+@media (max-width: 768px) {
+    .title {
+        font-size: 2rem;
+    }
+
+    .box div {
+        width: 25%;
+    }
 }
